...
        break;
      case ViewState.error:
        body = Center(child: Text(vm.errorMessage));
        break;
      case ViewState.success:
        if (vm.articles.isEmpty) {
          body = const Center(child: Text('No articles found'));
          break;
        }

        body = ListView.builder(
          padding: const EdgeInsets.symmetric(vertical: 8),
          itemCount: vm.articles.length,
...
